<resources>
    <string name="app_name">Chat</string>
    <string name="btn_enviar">Enviar</string>
    <string name="msj_input">Escribe aquí...</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo Electronico</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="chatfirebase">ChatFirebase</string>
</resources>
